# Photon-Mapping

./: .gitignore  CIE.ppm  CIE2.ppm  CMakeCache.txt  CMakeLists.txt  MersenneTwister.h  argparser.h  blue.ppm  boundingbox.h  cmake_install.cmake  compare.cpp  cylinder_ring.cpp  diff.ppm  face.cpp  face.h  full.ppm  glCanvas.cpp  glCanvas.h  hash.h  hit.h  image.h  kdtree.cpp  kdtree.h  main.cpp  material.cpp  material.h  mesh.cpp  photon.h  photon_mapping.cpp  photon_mapping.cpp~  photon_mapping.h  radiosity.cpp  radiosity.h  raytracer.cpp  raytree.cpp  raytree.h  red.ppm  sphere.cpp  utils.h  vbo_structs.h  (+2 more)
debug/: blue.ppm  full.ppm  green.ppm  red.ppm
python catmull clark/: catmull_clark.py
python scripts/: catmull_clark.py  generate_cube.py
src/: CMakeLists.txt  DiamondEulitzBrilliant_10000_20.txt  argparser.h  cmake_install.cmake  compare.cpp  face.cpp  face.h  glCanvas.cpp  glCanvas.h  hit.h  material.h  mesh.cpp  photon.h  photon_mapping.cpp  photon_mapping.h  radiosity.cpp  ray.h  raytracer.h  raytree.cpp  raytree.h  sphere.cpp  utils.h  vbo_structs.h  vectors.h
src/analysis_code/: aggregate_results.py  analysis.cpp
src/python scripts/: mesh_checker.py
